--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.6.0",
+    "@clerk/nextjs": "^6.2.1",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
